@@ -8,11 +8,22 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.authentication.WebAuthenticationDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.BindingResult;
 
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -26,8 +37,10 @@ public class AuthenticationService {
     private final AccountRepository accountRepository;
     private final PasswordEncoder passwordEncoder;
     private final JwtTokenProvider jwtTokenProvider;
+    private final AuthenticationManager authenticationManager;
 
-    public String loginWithEmailAndPassword(String email, String password) {
+    public String loginWithEmailAndPassword(String email, String password,
+                                            HttpServletRequest httpServletRequest) {
         Account account = accountRepository.findByEmail(email);
         if(account==null) {
             throw new AccountNotFoundException(String.format("Email[%s]를 찾을 수 없습니다", email));
@@ -35,7 +48,8 @@ public class AuthenticationService {
         if(!passwordEncoder.matches(password, account.getPassword())) {
             throw new IllegalArgumentException("패스워드가 일치하지 않습니다.");
         }
-        return getJwtToken(account);
+
+        return getAuthentication(account, httpServletRequest);
     }
 
     private String getJwtToken(Account account) {
@@ -43,12 +57,12 @@ public class AuthenticationService {
                 .stream().map(Object::toString).collect(Collectors.toList()));
     }
 
-    public ResponseEntity<Map<String, String>> getSuccessSignUpResponse(SignUpForm signupForm) {
-        Account newAccount = processNewAccount(signupForm);
-        String jwtToken = loginWithEmailAndPassword(signupForm.getEmail(), signupForm.getPassword());
-
+    public ResponseEntity<Map<String, String>> getSuccessSignUpResponse(SignUpForm signupForm, HttpServletRequest httpServletRequest) {
+        String jwtToken = loginWithEmailAndPassword(signupForm.getEmail(), signupForm.getPassword(), httpServletRequest);
         Map<String, String> responseBody = new HashMap<>();
-        responseBody.put("UserId", newAccount.getId().toString());
+
+        Account account = accountRepository.findByEmail(signupForm.getEmail());
+        responseBody.put("userId", account.getId().toString());
         responseBody.put("Token", jwtToken);
         return new ResponseEntity<>(responseBody, HttpStatus.CREATED);
     }
@@ -69,19 +83,26 @@ public class AuthenticationService {
         Account newAccount = Account.builder()
                 .email(signupForm.getEmail())
                 .nickname(signupForm.getNickname())
-                .roles(Collections.singletonList("ROLE_USER"))
+                .roles(List.of("ROLE_USER"))
                 .password(passwordEncoder.encode(signupForm.getPassword()))
                 .build();
 
         return accountRepository.save(newAccount);
     }
 
-    //    private void getAuthentication(Account account) {
-//        UsernamePasswordAuthenticationToken authenticationToken =
-//                new UsernamePasswordAuthenticationToken(
-//                        account.getEmail(),
-//                        account.getPassword(),
-//                        List.of(new SimpleGrantedAuthority("ROLE_USER")));
-//        SecurityContextHolder.getContext().setAuthentication(authenticationToken);
-//    }
+    public String getAuthentication(Account account, HttpServletRequest httpServletRequest) {
+        String token = getJwtToken(account);
+        Authentication authentication = jwtTokenProvider.getAuthentication(token);
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+
+        Authentication a = SecurityContextHolder.getContext().getAuthentication();
+
+        if(SecurityContextHolder.getContext().getAuthentication() == null) {
+            System.out.println("Service Authentication Null");
+        } else {
+            System.out.println("Service Authentication Exists");
+        }
+
+        return token;
+    }
 }
